Testando outra imagem

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Signika Negative", sans-serif;
     background-color: rgb(48, 45, 45);
-    background-image: url(/img/tumblr_4776467a66e27a3d42691cc74fcb0894_9d532099_1280.jpg);
+    background-image: url(/img/Amor\ a\ luz\ do\ luar!\ !!!!.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 500px;
