--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Signika Negative", sans-serif;
+    font-family: "Matemasie", sans-serif;
     background-color: rgb(48, 45, 45);
     background-image: url(/img/Amor\ a\ luz\ do\ luar!\ !!!!.jpeg);
     background-repeat: no-repeat;
