--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Matemasie", sans-serif;
+    font-family: "Signika Negative", sans-serif;
     background-color: rgb(48, 45, 45);
     background-image: url(/img/Amor\ a\ luz\ do\ luar!\ !!!!.jpeg);
     background-repeat: no-repeat;
@@ -12,6 +12,7 @@ body {
 
 h1 {
     color: #000080;
+    font-family: "Matemasie", sans-serif;
     font-size: 50px;
     font-weight: bold;
     text-align: center;
