--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 h1 {
     color: #000080;
-    font-family: "Matemasie", sans-serif;
+    font-family: "Playwrite HR Lijeva", system-ui;
     font-size: 50px;
     font-weight: bold;
     text-align: center;
